# blobot

./: .gitignore  Cargo.toml  README.md
src/: command_handler.rs  errors.rs  event_handler.rs  main.rs
src/commands/: code.rs  command.rs  help.rs  mod.rs
src/events/: message_create.rs  mod.rs  ready.rs
