[package]
name    = "blobot"
version = "0.1.0"
authors = ["Mesabloo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity   = "0.7"
env_logger = "0.7.1"
log        = "0.4.8"
cmd_lib    = "0.7.8"
nom        = "5.0.1"